# teamview

./: .gitignore  Cargo.toml  README.md
apps/desktop-ui/: app.js  index.html  styles.css
crates/desktop-client/: Cargo.toml
crates/desktop-client/src/: app.rs  audio.rs  audio_capture.rs  main.rs  media_foundation.rs  remote_input.rs  stats.rs
crates/desktop-client/src/capture/: mod.rs  windows.rs
crates/desktop-client/src/decode/: h264.rs  mod.rs
crates/desktop-client/src/encode/: h264.rs  mod.rs
crates/desktop-client/src/playback/: mod.rs
crates/desktop-client/src/transport/: mod.rs  quic.rs
crates/load-test/: Cargo.toml
crates/load-test/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  control.rs  frame.rs  lib.rs  packet.rs  stats.rs
crates/relay-server/: Cargo.toml
crates/relay-server/src/: config.rs  control.rs  control_stream.rs  lib.rs  main.rs  media.rs  metrics.rs  pacing.rs  room.rs  router.rs  session.rs  transport.rs
docs/: architecture.md  latency-testing.md  protocol.md
