[workspace]
members = [
    "crates/protocol",
    "crates/relay-server",
    "crates/desktop-client",
    "crates/load-test",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
