[workspace]
members = [
    "crates/protocol",
    "crates/relay-server",
    "crates/desktop-client",
    "crates/load-test",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive"] }
futures-util = "0.3.31"
quinn = "0.11.9"
rcgen = "0.14.5"
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "io-util", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
windows-sys = "0.61.2"
