[package]
name = "desktop-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
quinn.workspace = true
rustls.workspace = true
teamview-protocol = { path = "../protocol" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
