[package]
name = "load-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
relay-server = { path = "../relay-server" }
teamview-protocol = { path = "../protocol" }
tracing.workspace = true
tracing-subscriber.workspace = true
