[package]
name = "load-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
quinn.workspace = true
relay-server = { path = "../relay-server" }
rustls.workspace = true
teamview-protocol = { path = "../protocol" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
