[package]
name = "relay-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures-util.workspace = true
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
teamview-protocol = { path = "../protocol" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
